# rust-code-analysis-tui

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  cog.toml
.github/: release.yml
.github/workflows/: CHANGELOG.md  ci.yml
src/: analysis.rs  command.rs  error.rs  lib.rs  main.rs  metrics.rs  navigator.rs  ui.rs
