[package]
name = "rust-code-analysis-tui"
version = "0.0.5"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
dirs = "6.0.0"
ratatui = "0.29.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
walkdir = "2.5.0"


[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
